<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>curobo_rviz</name>
  <version>0.0.1</version>
  <description>
    Curobo rviz panels to modify parameters or add objects to the environment.
  </description>
  <maintainer email="will@todo.todo">will</maintainer>
  <license>Apache-2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rviz_common</depend>
  <depend>pluginlib</depend>
  <depend>curobo_msgs</depend>
  <depend>rviz_rendering</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>